--- a/sketch.html
+++ b/sketch.html
@@ -7,6 +7,7 @@
     <title>Reflection and Refraction</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
+    <script src="material.js"></script>
     <script src="geom.js"></script>
     <script src="main.js"></script>
     <style>
